<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="customisation_settings_title">DerpFest Customizations</string>
    <string name="monet_settings">Monet settings</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_summary">Tweak status bar elements</string>
    <string name="qs_title">Quick Settings</string>
    <string name="qs_summary">Customise your QS panel</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Configure options for notifications</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Set default behavior and actions for keys</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Configure options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_clock_title">Clock</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="misc_summary">Everything which doesn\'t fit elsewhere</string>
    <string name="keybox_title">Keybox</string>
    <string name="keybox_summary">Manage device keybox data</string>
    <string name="keybox_data_title">Load keybox data</string>
    <string name="keybox_data_summary">Select a keybox XML file to load</string>
    <string name="keybox_data_summary_loaded">Loaded %1$s keybox with %2$d certificates (%3$s)</string>
    <string name="keybox_data_delete_title">Delete keybox data</string>
    <string name="keybox_data_delete_summary">Remove currently loaded keybox data</string>
    <string name="keybox_data_loaded">Keybox data loaded successfully</string>
    <string name="keybox_data_cleared">Keybox data cleared</string>
    <string name="keybox_data_error">Failed to load keybox data</string>
    <string name="keybox_data_invalid">Invalid keybox XML file</string>
    <string name="dark_mode_summary_default">Enable system dark theme</string>
    <string name="dark_mode_summary_powersave">Power saver is enabled</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Control visibility of status bar icons</string>
    <string name="traffic_title">Traffic Indicators</string>
    <string name="status_bar_clock_date_title">Clock and Date</string>
    <string name="status_bar_clock_date_summary">Customize your statusbar clock and date</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_date_title">Date settings</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="status_bar_clock_auto_hide_title">Auto-hide clock</string>
    <string name="status_bar_clock_auto_hide_summary">Hide and show clock at regular intervals of time</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="unit_second">sec</string>
    <string name="unit_ms">ms</string>
    <string name="category_name_qs_brightness_slider">Brightness slider</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Adjust brightness slider from the Quick Settings</string>
    <string name="qs_brightness_slider_never">Never show</string>
    <string name="qs_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_brightness_slider_always">Show always</string>
    <string name="qs_brightness_slider_position_title">Brightness slider position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="qs_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="qs_transparency_title">Background opacity</string>
    <string name="qs_transparency_summary">Set opacity level for QS background</string>
    <string name="qs_footer_datausage_title">Data usage</string>
    <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
    <string name="use_photos_spoof_title">Unlimited Photos storage</string>
    <string name="use_photos_spoof_summary">Spoof your device as Pixel XL for Google Photos app only to provide unlimited storage for backup</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
    <string name="ambient_edge_light_action_title">Ambient edge lighting</string>
    <string name="ambient_edge_light_title">Edge lighting</string>
    <string name="ambient_edge_light_enable_title">Enable edge lighting</string>
    <string name="ambient_edge_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="ambient_edge_light_color_mode_category_title">Color</string>
    <string name="ambient_edge_light_color_mode_auto">Auto</string>
    <string name="ambient_edge_light_color_mode_app">App color</string>
    <string name="ambient_edge_light_color_mode_manual">Manual</string>
    <string name="ambient_edge_light_color_mode_auto_summary">Set edge light color to the system color</string>
    <string name="ambient_edge_light_color_mode_app_summary">Set edge light color to the app color</string>
    <string name="ambient_edge_light_color_mode_manual_summary">Pick a color manualy</string>
    <string name="ambient_edge_light_advanced_category_title">Advanced</string>
    <string name="ambient_edge_light_duration_title">Light duration</string>
    <string name="ambient_edge_light_repeat_count_title">Repeat count</string>
    <string name="ambient_edge_light_width_title">Light width</string>
    <string name="ambient_edge_light_face_down_title">Flip to activate</string>
    <string name="ambient_edge_light_face_down_summary">Show edge light only when the phone is facedown</string>
    <string name="enable_fingerprint_ripple_effect_title">Unlock animation</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="brightness_slider_style_title">Brightness slider style</string>
    <string name="brightness_slider_style_default">Default</string>
    <string name="brightness_slider_style_filled">Filled</string>
    <string name="brightness_slider_style_thin">Thin</string>
    <string name="brightness_slider_style_cyberpunk">CyberPunk</string>
    <string name="brightness_slider_style_gradientroundedbar">Gradient Rounded Bar</string>
    <string name="brightness_slider_style_outline">Outline</string>
    <string name="brightness_slider_style_shaded">Shaded</string>
    <string name="brightness_slider_style_translucent">Translucent</string>
    <string name="brightness_slider_style_leafyoutline">Leafy Outline</string>
    <string name="brightness_slider_style_minimalthumb">Minimal Thumb</string>
    <string name="brightness_slider_style_roundedclip">Rounded Clip</string>
    <string name="brightness_slider_style_bang">Bang</string>
    <string name="brightness_slider_style_acun">Acun</string>
    <string name="monet_settings_title">Monet Personalization</string>
    <string name="monet_settings_sammary">Customize the dynamic theme engine</string>
    <string name="monet_engine_custom_color_title">Accent color</string>
    <string name="monet_engine_custom_color_summary">Choose custom color for accent</string>
    <string name="monet_engine_custom_bgcolor_title">Background color</string>
    <string name="monet_engine_custom_bgcolor_summary">Choose custom color for background</string>
    <string name="monet_engine_color_override_title">Custom color</string>
    <string name="monet_engine_luminance_factor_title">Luminance</string>
    <string name="monet_engine_luminance_factor_summary">Higher values produce brighter colors</string>
    <string name="lockscreen_clock_colored_title">Colored clock</string>
    <string name="lockscreen_clock_colored_summary_on">Clock color is affected by monet</string>
    <string name="lockscreen_clock_colored_summary_off">Clock color is always black or white</string>
    <string name="ongoing_progress_settings_title">Statusbar action chip</string>
    <string name="ongoing_progress_settings_summary">Statusbar action chip options</string>
    <string name="compact_heads_up_notifications_enabled_title">Compact heads-up</string>
    <string name="compact_heads_up_notifications_enabled_summary">Display notifications in compact size</string>
    <string name="island_notification_title">Island notification</string>
    <string name="island_notification_summary">Display heads-up notification in Dynamic Island style</string>
    <string name="privacy_indicators_title">Privacy Indicators</string>
    <string name="mic_camera_privacy_indicators_title">Camera &amp; Microphone</string>
    <string name="mic_camera_privacy_indicators_summary">Show indicators when apps use camera or microphone</string>
    <string name="location_privacy_indicator_title">Location</string>
    <string name="location_privacy_indicator_summary">Show indicator when apps use location</string>
    <string name="status_bar_notification_ticker_title">Notification ticker</string>
    <string name="status_bar_logo_title">Custom logo</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_bluetooth_battery_level_title">Bluetooth battery level</string>
    <string name="status_bar_bluetooth_battery_level_summary">Show battery level for connected Bluetooth devices in status bar</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
</resources>