<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/statusbar_title" >

    <Preference
        android:key="status_bar_clock"
        android:fragment="org.derpfest.customizations.fragment.ClockSettingsFragment"
        android:icon="@drawable/ic_status_bar_clock"
        android:title="@string/status_bar_clock_title" />

        <Preference
            android:key="traffic"
            android:icon="@drawable/ic_traffic"
            android:title="@string/traffic_title">

            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.lineageparts"
                android:targetClass="org.lineageos.lineageparts.statusbar.NetworkTrafficSettings" />
        </Preference>

    <Preference
        android:key="battery"
        android:title="@string/status_bar_battery_title"
        android:icon="@drawable/ic_battery"
        android:fragment="org.derpfest.customizations.fragment.BatterySettings" />

        <Preference
            android:key="icon_manager"
            android:icon="@drawable/ic_statusbar_items"
            android:title="@string/icon_manager_title">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </Preference>

        <Preference
            android:key="status_bar_logo"
            android:icon="@drawable/ic_tag"
            android:title="@string/status_bar_logo_title">

            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.lineageparts"
                android:targetClass="org.lineageos.lineageparts.statusbar.StatusBarLogo" />
        </Preference>

        <Preference
            android:key="status_bar_notification_ticker"
            android:icon="@drawable/ic_notification"
            android:title="@string/status_bar_notification_ticker_title"
            android:fragment="org.derpfest.customizations.fragment.TickerSettingsFragment" />

    <org.derpfest.support.preferences.SystemSettingSwitchPreference
        android:key="bluetooth_battery_level"
        android:title="@string/status_bar_bluetooth_battery_level_title"
        android:summary="@string/status_bar_bluetooth_battery_level_summary"
        android:defaultValue="true" />

    <lineageos.preference.LineageSystemSettingListPreference
        android:key="qs_quick_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown_title"
        android:entries="@array/status_bar_quick_qs_pulldown_entries"
        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
        android:defaultValue="0" />

    <org.derpfest.support.preferences.SystemSettingSwitchPreference
        android:key="status_bar_brightness_control"
        android:title="@string/status_bar_toggle_brightness"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/privacy_indicators_title">

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="mic_camera_privacy_indicators"
            android:title="@string/mic_camera_privacy_indicators_title"
            android:summary="@string/mic_camera_privacy_indicators_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="location_privacy_indicator"
            android:title="@string/location_privacy_indicator_title"
            android:summary="@string/location_privacy_indicator_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
