<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_title" >

    <org.derpfest.support.preferences.SystemSettingSwitchPreference
        android:key="auth_ripple_enabled"
        android:title="@string/enable_fingerprint_ripple_effect_title"
        android:summary="@string/enable_fingerprint_ripple_effect_summary"
        android:defaultValue="true" />

    <Preference
        android:key="ambient_edge_light"
        android:title="@string/ambient_edge_light_title"
        android:summary="@string/ambient_edge_light_summary"
        android:fragment="org.derpfest.customizations.fragment.AmbientEdgeLightSettings"
        settings:controller="org.derpfest.customizations.fragment.AmbientEdgeLightPreferenceController"
        settings:requiresConfig="@bool/config_show_ambient_edge_light" />

    <PreferenceCategory
        android:key="lockscreen_clock_category"
        android:title="@string/lockscreen_clock_title">

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_clock_colored"
            android:title="@string/lockscreen_clock_colored_title"
            android:summaryOn="@string/lockscreen_clock_colored_summary_on"
            android:summaryOff="@string/lockscreen_clock_colored_summary_off"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
