<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/notifications_title" >

    <org.derpfest.support.preferences.SystemPropertySwitchPreference
        android:key="persist.sys.compact_heads_up_notification.always_show"
        android:title="@string/compact_heads_up_notifications_enabled_title"
        android:summary="@string/compact_heads_up_notifications_enabled_summary"
        android:defaultValue="false" />

    <Preference
        android:key="ongoing_progress_settings"
        android:title="@string/ongoing_progress_settings_title"
        android:summary="@string/ongoing_progress_settings_summary"
        android:fragment="org.derpfest.customizations.fragment.OngoingProgressBar" />

    <Preference
        android:key="island_notification"
        android:title="@string/island_notification_title"
        android:summary="@string/island_notification_summary"
        android:fragment="org.derpfest.customizations.fragment.IslandSettings" />

</PreferenceScreen>
