<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qs_title" >

        <org.derpfest.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_transparency"
            android:title="@string/qs_transparency_title"
            android:summary="@string/qs_transparency_summary"
            android:defaultValue="85"
            settings:interval="1"
            settings:units="%"
            android:max="100"
            android:min="1" />

    <PreferenceCategory
        android:title="@string/category_name_qs_brightness_slider">

        <org.derpfest.support.preferences.SecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/qs_brightness_slider_title"
            android:dialogTitle="@string/qs_brightness_slider_title"
            android:summary="%s"
            android:entries="@array/qs_brightness_slider_entries"
            android:entryValues="@array/qs_brightness_slider_values"
            android:defaultValue="2" />

        <org.derpfest.support.preferences.SecureSettingListPreference
            android:key="qs_brightness_slider_position"
            android:title="@string/qs_brightness_slider_position_title"
            android:dialogTitle="@string/qs_brightness_slider_position_title"
            android:summary="%s"
            android:entries="@array/qs_brightness_slider_position_entries"
            android:entryValues="@array/qs_brightness_slider_position_values"
            android:defaultValue="1" />

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_auto_brightness_title"
            android:summary="@string/qs_auto_brightness_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
