<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/status_bar_battery_title">

    <lineageos.preference.LineageSystemSettingListPreference
        android:key="status_bar_battery_style"
        android:title="@string/status_bar_battery_style_title"
        android:summary="%s"
        android:dialogTitle="@string/status_bar_battery_style_title"
        android:entries="@array/status_bar_battery_style_entries"
        android:entryValues="@array/status_bar_battery_style_values"
        android:defaultValue="0" />

    <lineageos.preference.LineageSystemSettingListPreference
        android:key="status_bar_show_battery_percent"
        android:title="@string/status_bar_battery_percentage_title"
        android:summary="%s"
        android:dialogTitle="@string/status_bar_battery_percentage_title"
        android:entries="@array/status_bar_battery_percentage_entries"
        android:entryValues="@array/status_bar_battery_percentage_values"
        android:defaultValue="0" />

</PreferenceScreen> 